...
                android:layout_height="match_parent"
                android:background="#373737">
                <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/household_register"
                    android:layout_marginTop="5dp">

                    <ImageView
                        android:layout_width="@dimen/registerlinkwidth"
                        android:layout_height="@dimen/registerlinkheight"
                        android:id="@+id/household_registerImageview"
...
                        android:layout_gravity="center_vertical" />
                </LinearLayout>
                <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/woman_register"
                    android:layout_marginTop="5dp">

                    <ImageView
                        android:layout_width="@dimen/registerlinkwidth"
                        android:layout_height="@dimen/registerlinkheight"
                        android:id="@+id/woman_registerImageview"
...
                </LinearLayout>

                <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/child_register"
                    android:layout_marginTop="5dp">

                    <ImageView
                        android:layout_width="@dimen/registerlinkwidth"
                        android:layout_height="@dimen/registerlinkheight"
                        android:id="@+id/child_registerImageview"
...
