...
        android:gravity="center_horizontal"
        android:text="John Doe"
        android:textColor="@android:color/white"
        android:textSize="@dimen/abc_text_size_medium_material" />

    <Button
        android:id="@+id/logout_b"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        android:background="@drawable/login_button"
        android:shadowDx="0"
...
